--- a/css/foundation.css
+++ b/css/foundation.css
@@ -72,7 +72,7 @@ img {
 .antialiased {
   -webkit-font-smoothing: antialiased; }
 
-  /* Add hover effect for button */
+  /* Add style for button */
 .VRbutton {
   border: none;
   padding: 14px 28px;
@@ -87,6 +87,7 @@ img {
   color: #2b2b2b;
 }
 
+  /* Add hover effect for button */
 .VRbutton:hover{
   /* style="margin:15px; padding: 1px; text-align: center; font-size: 16px; border: 1px; background-color: white; color:#2b2b2b;" */
   border: 2px solid white;
